name:                pinch
version:             0.1.0.0
synopsis:            An implementation of Thrift in Haskell.
description:         A native implementation of Thrift for Haskell.
homepage:            https://github.com/abhinav/pinch
license:             BSD3
license-file:        LICENSE
author:              Abhinav Gupta
maintainer:          mail@abhinavg.net
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type    : git
  location: git://github.com/abhinav/pinch.git


library
  exposed-modules  : Pinch.Generic
                   , Pinch.Internal.Message
                   , Pinch.Internal.Parser
                   , Pinch.Internal.Pinchable
                   , Pinch.Internal.TType
                   , Pinch.Internal.Value
                   , Pinch.Protocol
                   , Pinch.Protocol.Binary
                   , Pinch
  ghc-options      : -Wall -Werror
  build-depends    : base                 >= 4.8  && < 4.9

                   , array                >= 0.5
                   , bytestring           >= 0.10 && < 0.11
                   , containers           >= 0.5  && < 0.6
                   , hashable             >= 1.2  && < 1.3
                   , text                 >= 1.2  && < 1.3
                   , unordered-containers >= 0.2  && < 0.3
                   , vector               >= 0.10 && < 0.11
  default-language : Haskell2010


test-suite pinch-spec
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  ghc-options      : -Wall -Werror
  main-is          : Spec.hs
  other-modules    : Pinch.Arbitrary
                   , Pinch.GenericSpec
                   , Pinch.Internal.ParserSpec
                   , Pinch.Internal.PinchableSpec
                   , Pinch.Internal.TTypeSpec
                   , Pinch.Internal.ValueSpec
                   , Pinch.Protocol.BinarySpec
                   , Pinch.TestUtils
  build-depends    : base

                   , bytestring
                   , containers
                   , hspec                >= 2.0
                   , hspec-discover       >= 2.1
                   , QuickCheck           >= 2.5
                   , text
                   , unordered-containers
                   , vector

                   , pinch
  default-language : Haskell2010
