name          : pinch-bench
version       : 0.1.0.0
author        : Abhinav Gupta
maintainer    : mail@abhinavg.net
build-type    : Simple
cabal-version : >=1.10

executable pinch-bench
  main-is          : Bench.hs
  ghc-options      : -Wall
  build-depends    : base
                   , bytestring
                   , criterion >= 1.0
                   , deepseq
                   , hashable
                   , QuickCheck >= 2.8
                   , text
                   , unordered-containers
                   , vector

                   , pinch
  default-language : Haskell2010
