name          : keyvalue
version       : 0.1.0.0
author        : Abhinav Gupta
maintainer    : mail@abhinavg.net
build-type    : Simple
cabal-version : >=1.10

executable keyvalue-server
  main-is             : Server.hs
  other-modules       : Types
  ghc-options         : -Wall -threaded
  build-depends       : base
                      , bytestring
                      , containers
                      , http-types  >= 0.8 && < 0.9
                      , text
                      , wai  >= 3.0 && < 4.0
                      , warp >= 3.0 && < 4.0

                      , pinch
  default-language    : Haskell2010

executable keyvalue-client
  main-is             : Client.hs
  other-modules       : Types
  ghc-options         : -Wall -threaded
  build-depends       : base
                      , bytestring
                      , containers
                      , http-client >= 0.4 && < 0.5
                      , http-types  >= 0.8 && < 0.9
                      , text

                      , pinch
  default-language    : Haskell2010
